--- a/StarCapWeb/EvaluacionWeb.csproj
+++ b/StarCapWeb/EvaluacionWeb.csproj
@@ -67,18 +67,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AgregarClientes.aspx" />
+    <Content Include="IngresarLectura.aspx" />
     <Content Include="Default.aspx" />
-    <Content Include="VerCliente.aspx" />
+    <Content Include="IngresarMedidor.aspx" />
+    <Content Include="MostrarLecturas.aspx" />
+    <Content Include="VerMedidor.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AgregarClientes.aspx.cs">
-      <DependentUpon>AgregarClientes.aspx</DependentUpon>
+    <Compile Include="IngresarLectura.aspx.cs">
+      <DependentUpon>IngresarLectura.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="AgregarClientes.aspx.designer.cs">
-      <DependentUpon>AgregarClientes.aspx</DependentUpon>
+    <Compile Include="IngresarLectura.aspx.designer.cs">
+      <DependentUpon>IngresarLectura.aspx</DependentUpon>
     </Compile>
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
@@ -86,6 +88,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="IngresarMedidor.aspx.cs">
+      <DependentUpon>IngresarMedidor.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="IngresarMedidor.aspx.designer.cs">
+      <DependentUpon>IngresarMedidor.aspx</DependentUpon>
     </Compile>
     <Compile Include="Principal.Master.cs">
       <DependentUpon>Principal.Master</DependentUpon>
@@ -95,12 +104,19 @@
       <DependentUpon>Principal.Master</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="VerCliente.aspx.cs">
-      <DependentUpon>VerCliente.aspx</DependentUpon>
+    <Compile Include="MostrarLecturas.aspx.cs">
+      <DependentUpon>MostrarLecturas.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
-    <Compile Include="VerCliente.aspx.designer.cs">
-      <DependentUpon>VerCliente.aspx</DependentUpon>
+    <Compile Include="MostrarLecturas.aspx.designer.cs">
+      <DependentUpon>MostrarLecturas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="VerMedidor.aspx.cs">
+      <DependentUpon>VerMedidor.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="VerMedidor.aspx.designer.cs">
+      <DependentUpon>VerMedidor.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
